--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>
-		Meu primeiro site
-	</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
-
 <body>
-	<h1>Hello World!!</h1>
-	<br>
-	MIN DE PAPAI!
+	
 </body>
-
-<script>
-	alert("oi")
-</script>
-
 </html>
