--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Meu Primeiro Site</title>
+	<style>
+		body
+		{
+			background-color:rgb(93, 222, 166);
+		}
+
+		h1
+		{
+			color: black;
+			text-align: center;
+		}
+
+	</style>
 </head>
-<body>
+<body>		
 	<h1>Hello World</h1>
+	<h1>Brasil!!</h1>
 	<p>Olá Mundo</p>
 </body>
+<script>
+//	function usuario(){
+//	var nome = prompt("Qual é o seu nome ?")
+//	alert("Olá " + nome)
+//	var idade = prompt("Quantos anos você tem " + nome + "?")
+//	alert("Otimo!")
+//	}
+
+//	usuario();
+</script>
 </html>
