--- a/index.html
+++ b/index.html
@@ -4,34 +4,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Meu Primeiro Site</title>
-	<style>
-		body
-		{
-			background-color:rgb(93, 222, 166);
-		}
-
-		h1
-		{
-			color: black;
-			text-align: center;
-		}
-
-	</style>
+	<title>DARK-ROOM</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="img/Caveira-Pirata-PNG.png" type="image/x-icon">
 </head>
-<body>		
-	<h1>Hello World</h1>
-	<h1>Brasil!!</h1>
-	<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">AQUI</a>
+<body>	
+	<header></header>	
+		<main>
+		<h1>Pirata Games</h1>
+		<h2>welcome</h2>
+		<img src="img/Punisher-Logo-Quiz.jpg">
+		</main>
+	<footer></footer>
 </body>
-<script>
-//	function usuario(){
-//	var nome = prompt("Qual é o seu nome ?")
-//	alert("Olá " + nome)
-//	var idade = prompt("Quantos anos você tem " + nome + "?")
-//	alert("Otimo!")
-//	}
-
-//	usuario();
-</script>
 </html>
