--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>	
 	<header></header>	
 		<main>
-		<h1>Pirata Games</h1>
+		<h1>DARK-ROOM</h1>
 		<h2>welcome</h2>
-		<img src="img/Punisher-Logo-Quiz.jpg">
+		<p>Bem vindo ao <strong>DARK-ROOM</strong>, um lugar onde você não precisar pagar para jogar jogos. <br> Acomode-se e obtenha os melhores jogos da nova geração<br> sem precisar se preocupar com o seu dinheiro</p>
+		<img src="img/Punisher-Logo-Quiz.jpg" alt="Logo de caveira do DARK-ROOM">
 		</main>
 	<footer></footer>
 </body>
