--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 		<h2>welcome</h2>
 		<p>Bem vindo ao <strong>DARK-ROOM</strong>, um lugar onde você não precisar pagar para jogar jogos. <br> Acomode-se e obtenha os melhores jogos da nova geração<br> sem precisar se preocupar com o seu dinheiro</p>
 		<img src="img/Punisher-Logo-Quiz.jpg" alt="Logo de caveira do DARK-ROOM">
+		<div class="botao">
+			<a href="https://www.youtube.com/channel/UClluC5c4BgZtJV037mJBPDQ">AQUI</a>
+		</div>
 		</main>
 	<footer></footer>
 </body>
