estrutura do site

--- a/index.html
+++ b/index.html
@@ -9,16 +9,31 @@
 	<link rel="shortcut icon" href="img/Caveira-Pirata-PNG.png" type="image/x-icon">
 </head>
 <body>	
-	<header></header>	
-		<main>
-		<h1>DARK-ROOM</h1>
-		<h2>welcome</h2>
-		<p>Bem vindo ao <strong>DARK-ROOM</strong>, um lugar onde você não precisar pagar para jogar jogos. <br> Acomode-se e obtenha os melhores jogos da nova geração<br> sem precisar se preocupar com o seu dinheiro</p>
-		<img src="img/Punisher-Logo-Quiz.jpg" alt="Logo de caveira do DARK-ROOM">
-		<div class="botao">
-			<a href="https://www.youtube.com/channel/UClluC5c4BgZtJV037mJBPDQ">AQUI</a>
+
+	<header>
+		<div class="logo">
+			<p>Logo</p>
 		</div>
+		<nav>
+			<P>Menu</P>
+		</nav>
+	</header>	
+
+	<figure>
+		<img class="banner" src="img/Punisher-Logo-Quiz.jpg" alt="Logo de caveira do DARK-ROOM">
+	</figure>
+
+		<main>
+			<div class="container">
+				<h1>DARK-ROOM</h1>
+				<h2>welcome</h2>
+				<p>Bem vindo ao <strong class="darkroom__vermelho">DARK-ROOM</strong>, um lugar onde você não precisar pagar para jogar jogos. <br> Acomode-se e obtenha os melhores jogos da nova geração<br> sem precisar se preocupar com o seu dinheiro</p>
+			</div>	
 		</main>
-	<footer></footer>
+
+	<footer>
+		<p>Desenvolvido por Matheus Rodrigues Soares</p>
+	</footer>
+
 </body>
 </html>
