--- a/index.html
+++ b/index.html
@@ -25,15 +25,37 @@
 
 		<main>
 			<div class="container">
-				<h1>DARK-ROOM</h1>
-				<h2>welcome</h2>
-				<p>Bem vindo ao <strong class="darkroom__vermelho">DARK-ROOM</strong>, um lugar onde você não precisar pagar para jogar jogos. <br> Acomode-se e obtenha os melhores jogos da nova geração<br> sem precisar se preocupar com o seu dinheiro</p>
+				<section>
+					<h1>DARK-ROOM</h1>
+					<h2>welcome</h2>
+					<p>Bem vindo ao <strong class="darkroom__vermelho">DARK-ROOM</strong>, um lugar onde você não precisar pagar para jogar jogos, ver filmes, estudar cursos e afins.  Acomode-se e obtenha os melhores conteudos da internet sem precisar pagar nada sem precisar se preocupar com o seu dinheiro</p>
+				</section>
+
+				<section class="biografia">
+					<h2>Sobre nós</h2>
+					<p>
+						A DARK-ROOM é uma rede social, uma organização, um site pirata, formado por um grupo de pessoas com intuito de disponibilizar o maximo de conteudo paga da internet, de graça. Todos que participam da DARK-ROOM são anonimos, exibir sua vida ou você aqui é opcional. Seja bem vindo á DARK-ROOM
+					</p>
+
+					<img class="biografia__imagem" width="700" height=" 420" src="img/computador-escuro.jpg" alt="Imagem de um computador em um quarto computador-escuro">
+					
+				</section>
+
+				<section class="tutorial">
+					<h2>tutorial</h2>
+					<p>Para aqueles que ficarem com duvidas, para baixar um jogo, um filme, episódios de séries ou até mesmo curso, é simples! Siga os seguintes passos:<br>
+					1. Clique no conteudo que quizer consumir;<br>
+					2. Clique no botão "Download";<br>
+					3. Selecione o local do Download e ( Ex: Utorrent, Mega, Midia Fire,etc...)<br>
+					4. Após o conteudo ter baixado, extraia os arquivos para a sua area de trabalho ou pasta selecionada<br>
+					5. Selecione o arquivo que aparecer o nome do conteudo selecionado e o formato de arquivo correto, se for um crack para acessar um curso pago, apenas cole o codigo do arquivo "README.txt" no console do site e pronto!!</p>
+				</section>
+				
 			</div>	
 		</main>
 
 	<footer>
 		<p>Desenvolvido por Matheus Rodrigues Soares</p>
-		a
 	</footer>
 
 </body>
