--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 					5. Selecione o arquivo que aparecer o nome do conteudo selecionado e o formato de arquivo correto, se for um crack para acessar um curso pago, apenas cole o codigo do arquivo "README.txt" no console do site e pronto!!</p>
 
 					<p>Em questão sobre a rede social, é super simples de se acessar, apenas clique no botão "FORUM" no quanto superior esquerdo da tela e você ja tera acesso a postagens de usuarios, conteudo criados pelos mesmo e mais. Recomendamos que a criação do perfil de usuario para uma melhor experiença do nosso site( opcional).</p>
+
+					
+					<a>aqui</a> 
 				</section>
 				
 			</div>	
