--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				<section class="top_jogos">
 					<article>
-						<h2>TOP BRASIL</h2>
+						<h2>TOP BRASIL!</h2>
 						<p>Para voccê que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
 					</article>
 				</section>
