--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p>Logo</p>
 		</div>
 		<nav>
-			<P>Menu</P>
+			<a href="teste.html">Menu</a>
 		</nav>
 	</header>	
 
@@ -43,7 +43,7 @@
 
 						<h2>TUTORIAL</h2>
 						<p>Para aqueles que ficarem com duvidas, para baixar um jogo, um filme, episódios de séries ou até mesmo curso, é simples! Siga os seguintes passos:
-								<ul>
+								<ul class="topicos">
 									<li>Clique no conteudo que quizer consumir;</li>
 									<li> Clique no botão "Download";</li>
 									<li> Selecione o local do Download e ( Ex: Utorrent, Mega, Midia Fire,etc...)
@@ -58,6 +58,21 @@
 					<article>
 						<h2>TOP BRASIL!</h2>
 						<p>Para voccê que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
+						<h2>TOP FILMES</h2>
+						<p>
+							<ul class="topicos">
+								<li>1. Tudo em Todo o Lugar ao Mesmo Tempo</li>
+								<li>2. Triângulo da Tristeza</li>
+								<li>3. Os Banshees de Inisherin</li>
+								<li>4. John Wick 3: Parabellum</li>
+								<li>5. John Wick: De Volta ao Jogo</li>
+								<li>6. Os Fabelmans</li>
+								<li>7. A Queda</li>
+								<li>8. Top Gun: Maverick</li>
+								<li>9. John Wick 2: Um Novo Dia para Matar</li>
+								<li>10. Pânico 5</li>
+							</ul>
+						</p>
 					</article>
 				</section>
 				
