--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p>Logo</p>
 		</div>
 		<nav>
-			<a href="teste.html">Menu</a>
+			<a class="link__menu" href="teste.html">Menu</a>
 		</nav>
 	</header>	
 
@@ -54,7 +54,7 @@
 					</article>			
 				</section>
 
-				<section class="top_jogos">
+				<section class="tops">
 					<article>
 						<h2>TOP BRASIL!</h2>
 						<p>Para voccê que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
@@ -62,15 +62,44 @@
 						<p>
 							<ul class="topicos">
 								<li>1. Tudo em Todo o Lugar ao Mesmo Tempo</li>
+								<img class="capas__filmes" src="img/tudo-em-todo-lugar-ao-mesmo-tempo.jpg" alt="capa do filme">
 								<li>2. Triângulo da Tristeza</li>
+								<img  class="capas__filmes" src="img/triangulo da tristeza.jpg" alt="capa do filme">
 								<li>3. Os Banshees de Inisherin</li>
+								<img  class="capas__filmes" src="img/Os Banshees de Inisherin.jpg" alt="capa do filme">
 								<li>4. John Wick 3: Parabellum</li>
+								<img  class="capas__filmes" src="img/John_Wick_3_Parabellum.png" alt="capa do filme">
 								<li>5. John Wick: De Volta ao Jogo</li>
+								<img  class="capas__filmes" src="img/John_wick_.jpg" alt="capa do filme">
 								<li>6. Os Fabelmans</li>
+								<img  class="capas__filmes" src="img/os_fabelmans.jpg" alt="capa do filme">
 								<li>7. A Queda</li>
+								<img  class="capas__filmes" src="img/a queda.jpg" alt="capa do filme">
 								<li>8. Top Gun: Maverick</li>
+								<img  class="capas__filmes" src="img/Top_Gun_Maverick.jpg" alt="capa do filme">
 								<li>9. John Wick 2: Um Novo Dia para Matar</li>
+								<img  class="capas__filmes" src="img/John wick 2.jpg" alt="capa do filme">
 								<li>10. Pânico 5</li>
+								<img  class="capas__filmes" src="img/panico 5.jpg" alt="capa do filme">
+							</ul>
+						</p>
+						<h2>TOP JOGOS</h2>
+						<p>
+							<ul class="topicos">
+								<li>1. Elden Ring</li>
+								<img  class="capas__jogos" src="img/Elden_Ring_capa.jpg" alt="capa do jogo">
+								<li>2. Red Dead Redemption 2</li>
+								<img class="capas__jogos" src="img/RD2.jpg" alt="capa do jogo">
+								<li>3. God of War Ragnarok</li>
+								<img class="capas__jogos" src="img/GOW5.jpg" alt="capa do jogo">
+								<li>4. Cult of the Lamb</li>
+								<img class="capas__jogos" src="img/cult of the lamb.jpg" alt="capas do jogo">
+								<li>5. Sifu</li>
+								<li>6. Tunic</li>
+								<li>7. Multiversus</li>
+								<li>8. No Place for Bravery</li>
+								<li>9.  Teenage Mutant Ninja Turtles: Shredder's Revenge</li>
+								<li>10. Grounded</li>
 							</ul>
 						</p>
 					</article>
