--- a/index.html
+++ b/index.html
@@ -95,11 +95,17 @@
 								<li>4. Cult of the Lamb</li>
 								<img class="capas__jogos" src="img/cult of the lamb.jpg" alt="capas do jogo">
 								<li>5. Sifu</li>
+								<img class="capas__jogos" src="img/sifu.jpg" alt="capa do jogo">
 								<li>6. Tunic</li>
+								<img class="capas__jogos" src="img/tunic.jpg" alt="capa do jogo">
 								<li>7. Multiversus</li>
+								<img class="capas__jogos" src="img/multiversus.jpg" alt="capa do jogo">
 								<li>8. No Place for Bravery</li>
+								<img class="capas__jogos" src="img/no place for bravery.jpg" alt="capa do jogo">
 								<li>9.  Teenage Mutant Ninja Turtles: Shredder's Revenge</li>
+								<img class="capas__jogos" src="img/tartaruga ninja.jpg" alt="capa do jogo">
 								<li>10. Grounded</li>
+								<img class="capas__jogos" src="img/grounded.jpg" alt="capa do jogo">
 							</ul>
 						</p>
 					</article>
