--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 			<p>Logo</p>
 		</div>
 		<nav>
-			<a class="link__menu" href="teste.html">Menu</a>
+			<ul>
+				<li><a class="link__menu" href="teste.html">Menu</a></li>
+				<li><a class="link__menu" href="#welcome">Saudações</a></li>
+				<li><a class="link__menu" href="#tutorial">Tutorial</a></li>
+				<li><a class="link__menu" href="#topicos">Tops filmes e jogos</a></li>
+			</ul>
 		</nav>
 	</header>	
 
@@ -25,7 +30,7 @@
 	</figure>
 
 	<div class="container">
-		<section>
+		<section id="welcome">
 				<main>
 					<h1>DARK-ROOM</h1>
 					<h2>WELCOME</h2>
@@ -33,7 +38,7 @@
 				</main>
 		</section>
 
-				<section class="biografia">
+				<section id="biografia" class="biografia">
 					<article>
 						<h2>SOBRE NÓS</h2>
 						<p>	A DARK-ROOM é uma rede social, uma organização, um site pirata, formado por um grupo de pessoas com intuito de disponibilizar o maximo de conteudo pago da internet, de graça. Todos que participam da DARK-ROOM são anonimos, exibir sua vida ou você aqui é opcional. Seja bem vindo á DARK-ROOM</p>
@@ -41,6 +46,7 @@
 					</article>
 				</section>
 
+				<section id="tutorial">
 						<h2>TUTORIAL</h2>
 						<p>Para aqueles que ficarem com duvidas, para baixar um jogo, um filme, episódios de séries ou até mesmo curso, é simples! Siga os seguintes passos:
 								<ul class="topicos">
@@ -54,13 +60,13 @@
 					</article>			
 				</section>
 
-				<section class="tops">
+				<section id="topicos" class="tops">
 					<article>
 						<h2>TOP BRASIL!</h2>
 						<p>Para voccê que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
 						<h2>TOP FILMES</h2>
 						<p>
-							<ul class="topicos">
+							<ul class="topicos_1">
 								<li>1. Tudo em Todo o Lugar ao Mesmo Tempo</li>
 								<img class="capas__filmes" src="img/tudo-em-todo-lugar-ao-mesmo-tempo.jpg" alt="capa do filme">
 								<li>2. Triângulo da Tristeza</li>
@@ -85,7 +91,7 @@
 						</p>
 						<h2>TOP JOGOS</h2>
 						<p>
-							<ul class="topicos">
+							<ul class="topicos_2">
 								<li>1. Elden Ring</li>
 								<img  class="capas__jogos" src="img/Elden_Ring_capa.jpg" alt="capa do jogo">
 								<li>2. Red Dead Redemption 2</li>
