--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<header>
 		<div class="logo">
-			<p>Logo</p>
+			<h1>DARK-ROOM</h1>
 		</div>
 		<nav>
 			<ul>
@@ -21,6 +21,7 @@
 				<li><a class="link__menu" href="#welcome">Saudações</a></li>
 				<li><a class="link__menu" href="#tutorial">Tutorial</a></li>
 				<li><a class="link__menu" href="#topicos">Tops filmes e jogos</a></li>
+				<li><a class="link__menu" href="#redes-sociais">Me conheça</a></li>
 			</ul>
 		</nav>
 	</header>	
@@ -32,7 +33,6 @@
 	<div class="container">
 		<section id="welcome">
 				<main>
-					<h1>DARK-ROOM</h1>
 					<h2>WELCOME</h2>
 					<p>Bem vindo ao <strong class="darkroom__vermelho">DARK-ROOM</strong>, um lugar onde você não precisar pagar para jogar jogos, ver filmes, estudar cursos e afins.  Acomode-se e obtenha os melhores conteudos da internet sem precisar pagar nada sem precisar se preocupar com o seu dinheiro</p>
 				</main>
@@ -120,8 +120,12 @@
 			</div>	
 
 	<footer>
-		<article>
+		<article id="redes-sociais">
 			<p>Desenvolvido por Matheus Rodrigues Soares</p>
+			<div>
+				<a href="https://github.com/MatheusRSoarez"><img class="icones" width="40em" height="40em" src="img/github.png" alt="icone do github"></a>
+				<a href="https://www.instagram.com/mrsoaresphot/"><img class="icones" width="60em" height="40em" src="img/instagram.png" alt="icone do github"></a>
+			</div>
 		</article>
 	</footer>
 
