--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 </head>
 <body>	
 
-	<header>
+	<header id="inicio">
 		<div class="logo">
 			<h1>DARK-ROOM</h1>
+			<h2>Home</h2>
 		</div>
 		<nav>
-			<ul>
-				<li><a class="link__menu" href="teste.html">Menu</a></li>
+			<ul class="menu">
+				<li><a class="link__menu" href="index.html">Home</a></li>
+				<li><a class="link__menu" href="tabela.html">Tabelas</a></li>
 				<li><a class="link__menu" href="#welcome">Saudações</a></li>
 				<li><a class="link__menu" href="#tutorial">Tutorial</a></li>
 				<li><a class="link__menu" href="#topicos">Tops filmes e jogos</a></li>
-				<li><a class="link__menu" href="#redes-sociais">Me conheça</a></li>
+				<li><a class="link__menu" href="#redes-sociais">Redes Sociais</a></li>
+				<li><a class="link__menu" href="Contato.html">Contato</a></li>
 			</ul>
 		</nav>
 	</header>	
@@ -42,13 +45,14 @@
 					<article>
 						<h2>SOBRE NÓS</h2>
 						<p>	A DARK-ROOM é uma rede social, uma organização, um site pirata, formado por um grupo de pessoas com intuito de disponibilizar o maximo de conteudo pago da internet, de graça. Todos que participam da DARK-ROOM são anonimos, exibir sua vida ou você aqui é opcional. Seja bem vindo á DARK-ROOM</p>
-						<img class="biografia__imagem" width="700" height=" 420" src="img/computador-escuro.jpg" alt="Imagem de um computador em um quarto computador-escuro">
+						<img class="biografia__imagem" src="img/computador-escuro.jpg" alt="Imagem de um computador em um quarto computador-escuro">
 					</article>
 				</section>
 
 				<section id="tutorial">
 						<h2>TUTORIAL</h2>
 						<p>Para aqueles que ficarem com duvidas, para baixar um jogo, um filme, episódios de séries ou até mesmo curso, é simples! Siga os seguintes passos:
+							<img class="imagem_interrogacao" src="IMG/ponto_de_interrogação.jpg" alt="ponto de interrogação">
 								<ul class="topicos">
 									<li>Clique no conteudo que quizer consumir;</li>
 									<li> Clique no botão "Download";</li>
@@ -125,6 +129,9 @@
 			<div>
 				<a href="https://github.com/MatheusRSoarez"><img class="icones" width="40em" height="40em" src="img/github.png" alt="icone do github"></a>
 				<a href="https://www.instagram.com/mrsoaresphot/"><img class="icones" width="60em" height="40em" src="img/instagram.png" alt="icone do github"></a>
+			</div>
+			<div>
+				<a href="#inicio" class="link__footer">volte para o topo</a>
 			</div>
 		</article>
 	</footer>
