--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 					</article>
 				</section>
 
+				<section class="video" id="curi">
+					<div><iframe width="80%" height="500" src="https://www.youtube.com/embed/RPk6_775QBE" title="PIRATARIA É CRIME OU SALVAÇÃO?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+					<h2>Entenda sobre a pirataria</h2>				
+				</section>
+
 				<section id="tutorial">
 						<h2>TUTORIAL</h2>
 						<p>Para aqueles que ficarem com duvidas, para baixar um jogo, um filme, episódios de séries ou até mesmo curso, é simples! Siga os seguintes passos:
@@ -66,59 +71,123 @@
 
 				<section id="topicos" class="tops">
 					<article>
-						<h2>TOP BRASIL!</h2>
-						<p>Para voccê que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
-						<h2>TOP FILMES</h2>
-						<p>
-							<ul class="topicos_1">
-								<li>1. Tudo em Todo o Lugar ao Mesmo Tempo</li>
-								<img class="capas__filmes" src="img/tudo-em-todo-lugar-ao-mesmo-tempo.jpg" alt="capa do filme">
-								<li>2. Triângulo da Tristeza</li>
-								<img  class="capas__filmes" src="img/triangulo da tristeza.jpg" alt="capa do filme">
-								<li>3. Os Banshees de Inisherin</li>
-								<img  class="capas__filmes" src="img/Os Banshees de Inisherin.jpg" alt="capa do filme">
-								<li>4. John Wick 3: Parabellum</li>
-								<img  class="capas__filmes" src="img/John_Wick_3_Parabellum.png" alt="capa do filme">
-								<li>5. John Wick: De Volta ao Jogo</li>
-								<img  class="capas__filmes" src="img/John_wick_.jpg" alt="capa do filme">
-								<li>6. Os Fabelmans</li>
+						<div>
+							<h2>TOP BRASIL!</h2>
+							<p>Para voccê que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
+							<h2>TOP FILMES</h2>
+						</div>
+
+						<section id="colunas">
+							<div class="linha">
+								<div class="col-3">
+									<div>
+										<h3>1. Tudo em Todo o Lugar ao Mesmo Tempo</h3>
+									</div>
+									<img class="capas__filmes" src="img/tudo-em-todo-lugar-ao-mesmo-tempo.jpg" alt="capa do filme">
+								</div>
+								<div class="col-3">
+									<div>
+										<h3>2. Triângulo da Tristeza</h3>
+										<img  class="capas__filmes" src="img/triangulo da tristeza.jpg" alt="capa do filme">
+									</div>
+								</div>
+								<div class="col-3">
+									<div>
+										<h3>3. Os Banshees de Inisherin</h3>
+										<img  class="capas__filmes" src="img/Os Banshees de Inisherin.jpg" alt="capa do filme">
+									</div>
+								</div>
+								<div class="col-3">
+									<div>
+										<h3>
+											4. John Wick 3: Parabellum
+										</h3>
+										<img  class="capas__filmes" src="img/John_Wick_3_Parabellum.png" alt="capa do filme">
+									</div>
+								</div>
+								<div class="col-3">
+									<h3>
+										5. John Wick: De Volta ao Jogo
+									</h3>
+									<img  class="capas__filmes" src="img/John_wick_.jpg" alt="capa do filme">
+								</div>
+								<div class="col-3">
+									<h3>
+										6. Os Fabelmans
+									</h3>
 								<img  class="capas__filmes" src="img/os_fabelmans.jpg" alt="capa do filme">
-								<li>7. A Queda</li>
+								</div>
+								<div class="col-3">
+									<h3>
+										7. A Queda
+									</h3>
 								<img  class="capas__filmes" src="img/a queda.jpg" alt="capa do filme">
-								<li>8. Top Gun: Maverick</li>
+								</div>
+								<div class="col-3">
+									<h3>
+										8. Top Gun: Maverick
+									</h3>
 								<img  class="capas__filmes" src="img/Top_Gun_Maverick.jpg" alt="capa do filme">
-								<li>9. John Wick 2: Um Novo Dia para Matar</li>
+								</div>
+								<div class="col-3">
+									<h3>9. John Wick 2: Um Novo Dia para Matar</h3>
 								<img  class="capas__filmes" src="img/John wick 2.jpg" alt="capa do filme">
-								<li>10. Pânico 5</li>
+								</div>
+								<div class="col-3">
+									<h3>
+										10. Pânico 5
+									</h3>
 								<img  class="capas__filmes" src="img/panico 5.jpg" alt="capa do filme">
-							</ul>
-						</p>
-						<h2>TOP JOGOS</h2>
-						<p>
-							<ul class="topicos_2">
-								<li>1. Elden Ring</li>
+								</div>
+							</div>					
+						</section>						
+						<div>
+							<h2>TOP JOGOS!</h2>
+						</div>
+						<section id="colunas">
+							<div class="linha">
+								<div class="col-3">
+									<h3>1. Elden Ring</h3>
 								<img  class="capas__jogos" src="img/Elden_Ring_capa.jpg" alt="capa do jogo">
-								<li>2. Red Dead Redemption 2</li>
+								</div>
+								<div class="col-3">
+									<h3>2. Red Dead Redemption 2</h3>
 								<img class="capas__jogos" src="img/RD2.jpg" alt="capa do jogo">
-								<li>3. God of War Ragnarok</li>
+								</div>
+								<div class="col-3">
+									<h3>3. God of War Ragnarok</h3>
 								<img class="capas__jogos" src="img/GOW5.jpg" alt="capa do jogo">
-								<li>4. Cult of the Lamb</li>
+								</div>
+								<div class="col-3">
+									<h3>4. Cult of the Lamb</h3>
 								<img class="capas__jogos" src="img/cult of the lamb.jpg" alt="capas do jogo">
-								<li>5. Sifu</li>
+								</div>
+								<div class="col-3">
+									<h3>5. Sifu</h3>
 								<img class="capas__jogos" src="img/sifu.jpg" alt="capa do jogo">
-								<li>6. Tunic</li>
+								</div>
+								<div class="col-3">
+									<h3>6. Tunic</h3>
 								<img class="capas__jogos" src="img/tunic.jpg" alt="capa do jogo">
-								<li>7. Multiversus</li>
+								</div>
+								<div class="col-3">
+									<li>7. Multiversus</li>
 								<img class="capas__jogos" src="img/multiversus.jpg" alt="capa do jogo">
-								<li>8. No Place for Bravery</li>
+								</div>
+								<div class="col-3">
+									<h3>8. No Place for Bravery</h3>
 								<img class="capas__jogos" src="img/no place for bravery.jpg" alt="capa do jogo">
-								<li>9.  Teenage Mutant Ninja Turtles: Shredder's Revenge</li>
+								</div>
+								<div class="col-3">
+									<h3>9.  Teenage Mutant Ninja Turtles: Shredder's Revenge</h3>
 								<img class="capas__jogos" src="img/tartaruga ninja.jpg" alt="capa do jogo">
-								<li>10. Grounded</li>
+								</div>
+								<div class="col-3">
+										
+								<h3>10. Grounded</h3>
 								<img class="capas__jogos" src="img/grounded.jpg" alt="capa do jogo">
-							</ul>
-						</p>
-					</article>
+								</div>
+							</div>
 				</section>
 				
 			</div>	
