--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header id="inicio">
 		<div class="logo">
 			<h1>DARK-ROOM</h1>
-			<h2>Home</h2>
+			<h2 class="home">Home</h2>
 		</div>
 		<nav>
 			<ul class="menu">
@@ -51,7 +51,7 @@
 
 				<section class="video" id="curi">
 					<div><iframe width="80%" height="500" src="https://www.youtube.com/embed/RPk6_775QBE" title="PIRATARIA É CRIME OU SALVAÇÃO?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-					<h2>Entenda sobre a pirataria</h2>				
+					<h2 class="pirataria">Entenda sobre a pirataria</h2>				
 				</section>
 
 				<section id="tutorial">
