--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<nav>
 			<ul class="menu">
 				<li><a class="link__menu" href="index.html">Home</a></li>
-				<li><a class="link__menu" href="tabela.html">Tabelas</a></li>
+				<li><a class="link__menu" href="tabela.html">Jogos</a></li>
 				<li><a class="link__menu" href="#welcome">Saudações</a></li>
 				<li><a class="link__menu" href="#tutorial">Tutorial</a></li>
 				<li><a class="link__menu" href="#topicos">Tops filmes e jogos</a></li>
