--- a/tabela.html
+++ b/tabela.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
@@ -35,10 +35,70 @@
 
 	<div class="container">
 		<section>
-			<h1>Explicação jogos</h1>
+			<h1>Ajudas</h1>
+		</section>
+
+		<section>
+			<p>A <strong>DARK-ROOM</strong> como forma de ajudar os nossos usuarios que querem um tipo específico de jogo ou filme, criamos uma tabela com os nomes mais famosos de agora: </p>
+		</section>
+
+		<section>
+			<h1>Tabela de jogos</h1>
+			<table>
+				<tr>
+					<th>Jogo</th>
+					<th>Tipo</th>
+				</tr>
+				<tr>
+					<td>Elden Ring</td>
+					<td>RPG de ação</td>
+				</tr>
+				<tr>
+					<td>Hades</td>
+					<td>Roguelike</td>
+				</tr>
+				<tr>
+					<td>NeonWhite</td>
+					<td>Puzzle</td>
+				</tr>
+				<tr>
+					<td>Stray</td>
+					<td>Aventura</td>
+				</tr>
+				<tr>
+					<td>God of War</td>
+					<td>RPG</td>
+				</tr>
+			</table>
 		</section>
 		<section>
-			<h1>Tabela</h1>
+			<h1>Tabela de filmes</h1>
+			<table>
+				<tr>
+					<th>Filme</th>
+					<th>Tipo</th>
+				</tr>
+				<tr>
+					<td>John Wick 4: Baba Yaga</td>
+					<td>Ação</td>
+				</tr>
+				<tr>
+					<td>Homem Aranha: através do aranhaverso</td>
+					<td>Ação/heroi</td>
+				</tr>
+				<tr>
+					<td>Gato de Botas: ultimo desejo</td>
+					<td>Aventura/ação</td>
+				</tr>
+				<tr>
+					<td>Nada de Novo no Front</td>
+					<td>Guerra/Drama</td>
+				</tr>
+				<tr>
+					<td>A Baleia</td>
+					<td>Drama/Ficção</td>
+				</tr>
+			</table>
 		</section>
 	</div>	
 
