--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 						<p>Para aqueles que ficarem com duvidas, para baixar um jogo, um filme, episódios de séries ou até mesmo curso, é simples! Siga os seguintes passos:
 							<img class="imagem_interrogacao" src="IMG/ponto_de_interrogação.jpg" alt="ponto de interrogação">
 								<ul class="topicos">
-									<li>Clique no conteudo que quizer consumir;</li>
-									<li> Clique no botão "Download";</li>
-									<li> Selecione o local do Download e ( Ex: Utorrent, Mega, Midia Fire,etc...)
-									<li> Após o conteudo ter baixado, extraia os arquivos para a sua area de trabalho ou pasta selecionada.
-									<li> Selecione o arquivo que aparecer o nome do conteudo selecionado e o formato de arquivo correto, se for um crack para acessar um curso pago, apenas cole o codigo do arquivo "README.txt" no console do site e pronto!!</p></li>
+									<li class="lista_imagem">Clique no conteudo que quizer consumir;</li>
+									<li class="lista_imagem"> Clique no botão "Download";</li>
+									<li class="lista_imagem"> Selecione o local do Download e ( Ex: Utorrent, Mega, Midia Fire,etc...)
+									<li class="lista_imagem"> Após o conteudo ter baixado, extraia os arquivos para a sua area de trabalho ou pasta selecionada.
+									<li class="lista_imagem"> Selecione o arquivo que aparecer o nome do conteudo selecionado e o formato de arquivo correto, se for um crack para acessar um curso pago, apenas cole o codigo do arquivo "README.txt" no console do site e pronto!!</p></li>
 								</ul>
 						<p>Em questão sobre a rede social, é super simples de se acessar, apenas clique no botão "FORUM" no quanto superior esquerdo da tela e você ja tera acesso a postagens de usuarios, conteudo criados pelos mesmo e mais. Recomendamos que a criação do perfil de usuario para uma melhor experiença do nosso site(opcional).</p>
 					</article>			
