--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<article>
 						<div>
 							<h2>TOP BRASIL!</h2>
-							<p>Para voccê que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
+							<p>Para você que está perdido e não sabe qual jogo começar a jogar ou filme para assistir, separamos os TOP jogos/filmes mais consumidos pelo Brasil</p>
 							<h2>TOP FILMES</h2>
 						</div>
 
