--- a/tabela.html
+++ b/tabela.html
@@ -69,6 +69,34 @@
 					<td>God of War</td>
 					<td>RPG</td>
 				</tr>
+				<tr>
+					<td>Read Dead Redemption 2</td>
+					<td>Ação/aventura</td>
+				</tr>
+				<tr>
+					<td>Cult of the Lamb</td>
+					<td>Roguelike</td>
+				</tr>
+				<tr>
+					<td>Sifu</td>
+					<td>Ação/aventura</td>
+				</tr>
+				<tr>
+					<td>Hollow Knight</td>
+					<td>Metroidvannia</td>
+				</tr>
+				<tr>
+					<td>Katana Zero</td>
+					<td>Plataforma/ação</td>
+				</tr>
+				<tr>
+					<td>My Friend Pedro</td>
+					<td>Shoot'em up</td>
+				</tr>
+				<tr>
+					<td>Silent Hill</td>
+					<td>Survivel Horror</td>
+				</tr>
 			</table>
 		</section>
 		<section>
@@ -97,6 +125,34 @@
 				<tr>
 					<td>A Baleia</td>
 					<td>Drama/Ficção</td>
+				</tr>
+				<tr>
+					<td>A queda</td>
+					<td>Suspense/sobrevivencia</td>
+				</tr>
+				<tr>
+					<td>Panico 5</td>
+					<td>Terror</td>
+				</tr>
+				<tr>
+					<td>Glass Onion: A Knives Out Mistery</td>
+					<td>Mistério/comédia</td>
+				</tr>
+				<tr>
+					<td> Através do Aranhaverso</td>
+					<td>Aventura/ação</td>
+				</tr>
+				<tr>
+					<td>The Flash</td>
+					<td>Ação/fantasia</td>
+				</tr>
+				<tr>
+					<td>Adão Negro</td>
+					<td>Ação/aventura</td>
+				</tr>
+				<tr>
+					<td>Guardiões da Galáxia Vol. 3</td>
+					<td>Ação/Ficção Científica</td>
 				</tr>
 			</table>
 		</section>
