--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 			</div>
 			<div>
 				<a href="#inicio" class="link__footer">volte para o topo</a>
+				<a href="" class="link__footer"></a>
 			</div>
 		</article>
 	</footer>
