--- a/Contato.html
+++ b/Contato.html
@@ -13,8 +13,7 @@
 
 	<header id="inicio">
 		<div class="logo">
-			<h1>DARK-ROOM</h1>
-			<h2>Contato</h2>
+			<a href="index.html"><img class="logo_foto" src="img/punisher logo.png" alt=""></a>
 		</div>
 		<nav>
 			<ul class="menu">
