--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 
 	<header id="inicio">
 		<div class="logo">
-			<h1>DARK-ROOM</h1>
-			<h2 class="home">Home</h2>
+			<a href="index.html"><img class="logo_foto" src="img/punisher logo.png" alt=""></a>
 		</div>
 		<nav>
 			<ul class="menu">
-				<li><a class="link__menu" href="index.html">Home</a></li>
+				<li ><a class="link__menu" href="index.html">Home</a></li>
 				<li><a class="link__menu" href="tabela.html">Jogos</a></li>
 				<li><a class="link__menu" href="#welcome">Saudações</a></li>
 				<li><a class="link__menu" href="#tutorial">Tutorial</a></li>
