--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<li><a class="link__menu" href="#topicos">Tops filmes e jogos</a></li>
 				<li><a class="link__menu" href="#redes-sociais">Redes Sociais</a></li>
 				<li><a class="link__menu" href="Contato.html">Contato</a></li>
+				<li><a class="link__menu" href="position.html">POSITION</a></li>
 			</ul>
 		</nav>
 	</header>	
