--- a/position.html
+++ b/position.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css-position/css-position.css">
+    <link rel="stylesheet" href="position css/css-position.css">
     <title>Position</title>
 </head>
 <header>
     <div class="fixado">
         <h1>ISSO ESTA FIXADO :D</h1>
+        <a href="index.html">volte ao inicio</a>
     </div>
 </header>
 <body class="relative0">
@@ -20,7 +21,7 @@
         </div>
     </div>
     <div class="fixado-baixo">
-        <img width="40em" src="img-position/ponto de exclamação.png">
+        <img width="40em" src="img/ponto de exclamação.png">
     </div>
 </body>
 </html>
