--- a/position/position.html
+++ b/position/position.html
@@ -8,20 +8,16 @@
     <title>Position</title>
 </head>
 <header>
-    <div class="fixado">
+     <div class="fixado">
         <h1>ISSO ESTA FIXADO :D</h1>
         <a href="index.html">volte ao inicio</a>
     </div>
 </header>
-<body class="relative0">
-    <div class="relativo1">
-        <p>Isso é uma caixa relativa</p>
-        <div class="absoluto">
-            <p>Isso é uma caixa absoluta</p>
-        </div>
-    </div>
-    <div class="fixado-baixo">
-        <img width="40em" src="img/ponto de exclamação.png">
+
+<body>
+    <div class=".container">
+        <img src="img/banner-laranja.jpg" alt="">
+        <div class="cimadireita">Isso aqui esta absoluto</div>
     </div>
 </body>
 </html>
