--- a/position/position.html
+++ b/position/position.html
@@ -18,6 +18,10 @@
     <div class=".container">
         <img src="img/banner-laranja.jpg" alt="">
         <div class="cimadireita">Isso aqui esta absoluto</div>
+        <div class="cimaesquerda">Isso aqui esta absoluto</div>
+        <div class="baixoesquerda">Isso aqui esta absoluto</div>
+        <div class="baixodireita">Isso aqui esta absoluto</div>
+        <div class="centro">Isso aqui esta absoluto</div>
     </div>
 </body>
 </html>
