--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/Caveira-Pirata-PNG.png" type="image/x-icon">
 </head>
+<header id="inicio">
+	<div class="logo">
+		<a href="index.html"><img class="logo_foto" src="img/punisher logo.png" alt=""></a>
+	</div>
+	<nav>
+		<ul class="menu">
+			<li ><a class="link__menu" href="index.html">Home</a></li>
+			<li><a class="link__menu" href="#welcome">Saudações</a></li>
+			<li><a class="link__menu" href="#tutorial">Tutorial</a></li>
+			<li><a class="link__menu" href="#topicos">Tops filmes e jogos</a></li>
+			<li><a class="link__menu" href="tabela.html">Tabelas</a></li>
+			<li><a class="link__menu" href="#redes-sociais">Redes Sociais</a></li>
+			<li><a class="link__menu" href="Contato.html">Contato</a></li>
+		</ul>
+	</nav>
+</header>	
+
 <body>	
 
-	<header id="inicio">
-		<div class="logo">
-			<a href="index.html"><img class="logo_foto" src="img/punisher logo.png" alt=""></a>
-		</div>
-		<nav>
-			<ul class="menu">
-				<li ><a class="link__menu" href="index.html">Home</a></li>
-				<li><a class="link__menu" href="tabela.html">Jogos</a></li>
-				<li><a class="link__menu" href="#welcome">Saudações</a></li>
-				<li><a class="link__menu" href="#tutorial">Tutorial</a></li>
-				<li><a class="link__menu" href="#topicos">Tops filmes e jogos</a></li>
-				<li><a class="link__menu" href="#redes-sociais">Redes Sociais</a></li>
-				<li><a class="link__menu" href="Contato.html">Contato</a></li>
-				<li><a class="link__menu" href="position.html">POSITION</a></li>
-			</ul>
-		</nav>
-	</header>	
 
 	<figure>
 		<img class="banner" src="img/Punisher-Logo-Quiz.jpg" alt="Logo de caveira do DARK-ROOM">
@@ -192,6 +192,9 @@
 				
 			</div>	
 
+		</footer>
+		
+	</body>
 	<footer>
 		<article id="redes-sociais">
 			<p>Desenvolvido por Matheus Rodrigues Soares</p>
@@ -199,12 +202,5 @@
 				<a href="https://github.com/MatheusRSoarez"><img class="icones" width="40em" height="40em" src="img/github.png" alt="icone do github"></a>
 				<a href="https://www.instagram.com/mrsoaresphot/"><img class="icones" width="60em" height="40em" src="img/instagram.png" alt="icone do github"></a>
 			</div>
-			<div>
-				<a href="#inicio" class="link__footer">volte para o topo</a>
-				<a href="" class="link__footer"></a>
-			</div>
 		</article>
-	</footer>
-
-</body>
 </html>
