--- a/tabela.html
+++ b/tabela.html
@@ -18,10 +18,10 @@
 		<nav>
 			<ul class="menu">
 				<li><a class="link__menu" href="index.html">Home</a></li>
-				<li><a class="link__menu" href="tabela.html">Jogos</a></li>
 				<li><a class="link__menu" href="index.html#welcome">Saudações</a></li>
 				<li><a class="link__menu" href="index.html#tutorial">Tutorial</a></li>
 				<li><a class="link__menu" href="index.html#topicos">Tops filmes e jogos</a></li>
+				<li><a class="link__menu" href="tabela.html">Tabelas</a></li>
 				<li><a class="link__menu" href="index.html#redes-sociais">Redes sociais</a></li>
 				<li><a class="link__menu" href="Contato.html">Contato</a></li>
 			</ul>
@@ -163,10 +163,6 @@
 			<div>
 				<a href="https://github.com/MatheusRSoarez"><img class="icones" width="40em" height="40em" src="img/github.png" alt="icone do github"></a>
 				<a href="https://www.instagram.com/mrsoaresphot/"><img class="icones" width="60em" height="40em" src="img/instagram.png" alt="icone do github"></a>
-			</div>
-			<div>
-				<a href="#inicio" class="link__footer">volte para o topo</a>
-			</div>
 		</article>
 	</footer>
 
