--- a/Contato.html
+++ b/Contato.html
@@ -9,50 +9,42 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/Caveira-Pirata-PNG.png" type="image/x-icon">
 </head>
+<header id="inicio">
+	<div class="logo">
+		<a href="index.html"><img class="logo_foto" src="img/punisher logo.png" alt=""></a>
+	</div>
+	<nav>
+		<ul class="menu">
+			<li><a class="link__menu" href="index.html">Home</a></li>
+			<li><a class="link__menu" href="index.html#welcome">Saudações</a></li>
+			<li><a class="link__menu" href="index.html#tutorial">Tutorial</a></li>
+			<li><a class="link__menu" href="index.html#topicos">Tops filmes e jogos</a></li>
+			<li><a class="link__menu" href="tabela.html">Tabelas</a></li>
+			<li><a class="link__menu" href="index.html#redes-sociais">Redes sociais</a></li>
+			<li><a class="link__menu" href="Contato.html">Contato</a></li>
+		</ul>
+	</nav>
+</header>	
+
 <body>	
-
-	<header id="inicio">
-		<div class="logo">
-			<a href="index.html"><img class="logo_foto" src="img/punisher logo.png" alt=""></a>
+	<main>
+		<div class="tabela_container">
+			<form>
+				<label for="fname"><p class="preto">Seu nome</p></label><br>
+				<input type="text" id="fname" value=""><br>
+				<label for="lname"><p class="preto">Seu ultimo nome</p></label><br>
+				<input type="text" id="lname" value=""><br>
+			</form>
 		</div>
-		<nav>
-			<ul class="menu">
-				<li><a class="link__menu" href="index.html">Home</a></li>
-				<li><a class="link__menu" href="tabela.html">Jogos</a></li>
-				<li><a class="link__menu" href="index.html#welcome">Saudações</a></li>
-				<li><a class="link__menu" href="index.html#tutorial">Tutorial</a></li>
-				<li><a class="link__menu" href="index.html#topicos">Tops filmes e jogos</a></li>
-				<li><a class="link__menu" href="index.html#redes-sociais">Redes sociais</a></li>
-				<li><a class="link__menu" href="Contato.html">Contato</a></li>
-			</ul>
-		</nav>
-	</header>	
-
-	<figure>
-		<img class="banner3" src="img/Anonymous_emblem.svg.png" alt="Logo de caveira do DARK-ROOM">
-	</figure>
-
-	<div class="container">
-		<section>
-			<h1>Explicação contato</h1>
-		</section>
-		<section>
-			<h1>formulario</h1>
-		</section>
-	</div>	
-
-	<footer>
-		<article id="redes-sociais">
-			<p>Desenvolvido por Matheus Rodrigues Soares</p>
-			<div>
-				<a href="https://github.com/MatheusRSoarez"><img class="icones" width="40em" height="40em" src="img/github.png" alt="icone do github"></a>
-				<a href="https://www.instagram.com/mrsoaresphot/"><img class="icones" width="60em" height="40em" src="img/instagram.png" alt="icone do github"></a>
-			</div>
-			<div>
-				<a href="#inicio" class="link__footer">volte para o topo</a>
-			</div>
-		</article>
-	</footer>
-
+	</main>
 </body>
+<footer>
+	<article id="redes-sociais">
+		<p>Desenvolvido por Matheus Rodrigues Soares</p>
+		<div>
+			<a href="https://github.com/MatheusRSoarez"><img class="icones" width="40em" height="40em" src="img/github.png" alt="icone do github"></a>
+			<a href="https://www.instagram.com/mrsoaresphot/"><img class="icones" width="60em" height="40em" src="img/instagram.png" alt="icone do github"></a>
+		</div>
+	</article>
+</footer>
 </html>
