--- a/Contato.html
+++ b/Contato.html
@@ -30,10 +30,43 @@
 	<main>
 		<div class="tabela_container">
 			<form>
-				<label for="fname"><p class="preto">Seu nome</p></label><br>
-				<input type="text" id="fname" value=""><br>
-				<label for="lname"><p class="preto">Seu ultimo nome</p></label><br>
-				<input type="text" id="lname" value=""><br>
+				<label for="name"><p class="preto">Nome completo:</p></label>
+				<input type="text" id="name"  placeholder="Seu nome completo.">
+				<label for="num"><p class="preto">Telefone:</p></label>
+				<input type="text" id="num" placeholder="(99) 99999-9999">
+				<label for="email"><p class="preto">E-mail:</p></label>
+				<input type="text" id="email"  placeholder="exemplo@gmail.com">
+				<label for="estado"><p class="preto">Estado</p></label>
+				<select name="estado" id="estado">
+					<option value="AC">AC</option>
+					<option value="AL">AL</option>
+					<option value="AP">AP</option>
+					<option value="AM">AM</option>
+					<option value="BA">BA</option>
+					<option value="CE">CE</option>
+					<option value="ES">ES</option>
+					<option value="GO">GO</option>
+					<option value="MA">MA</option>
+					<option value="MT">MT</option>
+					<option value="MS">MS</option>
+					<option value="MG">MG</option>
+					<option value="PA">PA</option>
+					<option value="PB">PB</option>
+					<option value="PR">PR</option>
+					<option value="PE">PE</option>
+					<option value="PI">PI</option>
+					<option value="RJ">RJ</option>
+					<option value="RN">RN</option>
+					<option value="RS">RS</option>
+					<option value="RO">RO</option>
+					<option value="RR">RR</option>
+					<option value="SC">SC</option>
+					<option value="SP">SP</option>
+					<option value="SE">SE</option>
+					<option value="TO">TO</option>
+				</select>
+				<label for="reclamação"><p class="preto">Escreva a sua reclamação:</p></label>
+				<textarea  id="reclamação" cols="30" rows="10" placeholder="Escreva aqui..."></textarea>
 			</form>
 		</div>
 	</main>
