--- a/Contato.html
+++ b/Contato.html
@@ -68,6 +68,10 @@
 				<label for="reclamação"><p class="preto">Escreva a sua reclamação:</p></label>
 				<textarea  id="reclamação" cols="30" rows="10" placeholder="Escreva aqui..."></textarea>
 			</form>
+			<div >
+				<br><br>
+				<a class="botão__enviar" href="">Enviar</a>
+			</div>
 		</div>
 	</main>
 </body>
